# DVersion-Data-Workarounds

./: .gitignore  LICENSE.md  README.md
AppleScript/: Base.applescript  README.md
Java/: README.md
Java/VI-Base/: pom.xml
Java/VI-Base/src/main/java/base/: Base.java
JavaScript/: README.md  build-sale.js  dm-git.js  package.json
JavaScript/base/base-lib/: Base.js  Constants.js  Utils.js  index.js
JavaScript/base/base-test/: Test.js
Python/: README.md  build-sale.py  dm-git.py
Python/base/base-lib/: __init__.py  base.py
Rust/: Cargo.toml  README.md
Rust/src/: lib.rs  main.rs
Swift/: README.md
Swift/VI-Base/: Package.swift  README.md
Swift/VI-Base/Sources/VI-Base/: RegexFunctions.swift  Search.swift  VI_Base.swift
Swift/VI-Base/Tests/: LinuxMain.swift
Swift/VI-Base/Tests/VI-BaseTests/: VI_BaseTests.swift  XCTestManifests.swift
TypeScript/: README.md  tsconfig.json
TypeScript/lib/: Base.ts  Constants.ts  HTTPS.ts  Logic.ts
TypeScript/tests/: Test.ts
