[package]
name = "dversion"
version = "0.1.0"
authors = ["Benjamin Richeson <benricheson101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.4", features = ["rt-multi-thread", "macros"] }
